<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_main" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/label_history" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/label_orders" />
        <item
            android:id="@+id/nav_messages"
            android:icon="@drawable/ic_notification"
            android:title="@string/label_messages" />
    </group>

    <group android:id="@+id/group_shopping">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/label_cart" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/label_favorites" />
    </group>

</menu>
